@@ -681,9 +681,9 @@
       <para>At the top of this window is the title bar, which displays the
       file name (once you have saved the file.) Below that is the menu bar.
       You can access the menu options by either clicking on these menu
-      headings or by using shortcut key combinations, covered later in this
-      chapter. Next is the tool bar, which contains buttons for the most
-      common functions.</para>
+      headings or by using shortcuts and access key combinations, covered
+      later in this chapter. Next is the tool bar, which contains buttons
+      for the most common functions.</para>
       
       <para>The account tree appears below the tool bar. Once you have
       started creating accounts, the account names will appear in the account
@@ -799,14 +799,13 @@
       window, this will bring up a list of account items. In the account
       register window, this will bring up a list of transaction items.</para>
 
-      <para>Other ways of accessing menu items are through keyboard shortcuts,
-      described next.</para>
-    </sect2>
+      <para>Other ways of accessing menu items are through keyboard shortcuts
+      and access keys, described next.</para> </sect2>
 
     <sect2 id="basics-shortcut2">
       <title>Menu Shortcuts</title>
 
-      <para>Most of the menu items have keyboard shortcuts, and these are
+      <para>All of the menu items have access keys which are
       marked by underlined characters in the menu names. Pressing the
       <keycap>Alt</keycap> key with the underlined character in the menu
       heading will bring up the menu items for that heading. Once the menu
@@ -816,18 +815,28 @@
 
           <keycap>F</keycap>
         </keycombo> in the main window brings up the <guimenu>File</guimenu>
-      menu, then typing <keycap>S</keycap> will save the file. A few of the
-      menu items use <keycap>Ctrl</keycap> key and function (for example
-      <keycap>F3</keycap> to open a new file) key shortcuts as well, and these
-      are listed next to the items.</para>
+      menu, then typing <keycap>S</keycap> will save the file.  Access keys
+       are fixed and may not be changed by users.</para>
+
+      <para>Some of the more commonly used menu items also have shortcut keys
+      that directly activate the command without having to traverse the menu
+      structure.  These shortcuts typically use the <keycap>Ctrl</keycap>
+      key, although they can use any key combination.  Menu shortcuts are
+      displayed at the end of each menu item.  These shortcuts may be edited
+      by users by setting a preference in the "Menu and Toolbar" preference
+      panel.</para>
 
       <para>GnuCash, as a Gnome application, also allows you to define your
-      own menu shortcuts. To define a shortcut, click on the menu header and
-      move the mouse pointer over the menu item. While the menu item is
+      own menu shortcuts. To define a shortcut, first go to the "Menu and
+      Toolbar" preference panel and select the "Editable menu accelerators"
+      check box.  Then return to GnuCash, click on the menu header and move
+      the mouse pointer over the menu item. While the menu item is
       highlighted, press a key or key combination to set the shortcut. You
       should now see your shortcut choice next to the item in the menu. To
       delete a shortcut, press the <keycap>Delete</keycap> key while the menu
-      item is highlighted.</para>
+      item is highlighted.  Be careful when setting shortcuts as Gnome does
+      no checking on the key values pressed, and you can easily do things
+      like set a letter of the alphabet as your shortcut.</para>
     </sect2>
   </sect1>
 
