@@ -442,7 +442,7 @@
     resulting value to the amount field when you press the
     <keycap>Tab</keycap> key.</para>
 
-    <para>Most of the menu items have keyboard shortcuts, and these are marked
+    <para>All of the menu items have access keys defined, and these are marked
     by underlined characters in the menu names. Press <keycap>Alt</keycap> +
     [underlined character] to bring up the menu, then select an item by typing
     its underlined character. For example, typing <keycombo>
@@ -450,9 +450,10 @@
 
         <keycap>T</keycap>
       </keycombo> brings up the Transaction menu, then typing
-    <keycap>S</keycap> will split the transaction. A few of the menu items use
-    <keycap>Ctrl</keycap> key shortcuts instead, and these are listed next to
-    the item.</para>
+    <keycap>S</keycap> will split the transaction. A few of the menu items
+    also have shortcut keys that immediately invoke the command (typically
+    using the <keycap>Ctrl</keycap> key).  These shortcuts are listed next
+    to the item.</para>
 
     <para>To move around the register, use these keys to save time:</para>
 
