@@ -1,3 +1,10 @@
+2006-08-14  David Hampton  <hampton@employees.org>
+
+	* guide/C/ch_txns.xml:
+	* guide/C/ch_basics.xml: Update the text to distinguish between
+	access (underlined) keys and actual menu shortcuts (listed at the
+	end of a menu item).
+
 2006-07-09  Chris Lyttle  <chris@wilddev.net>
 
 	* help/C/gettingstarted.xml: Added update from Dave Herman
